HKA 12.11.13 Tasks events nots in each Objects

--- a/index.yaml
+++ b/index.yaml
@@ -12,6 +12,14 @@ indexes:
 
 - kind: Event
   properties:
+  - name: about_item
+  - name: about_kind
+  - name: comments
+  - name: status
+  - name: starts_at
+
+- kind: Event
+  properties:
   - name: comments
   - name: status
   - name: starts_at
