--- a/index.yaml
+++ b/index.yaml
@@ -10,6 +10,12 @@ indexes:
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
 
+- kind: Comment
+  properties:
+  - name: discussion
+  - name: updated_at
+    direction: desc
+
 - kind: Event
   properties:
   - name: about_item
