--- a/index.yaml
+++ b/index.yaml
@@ -118,6 +118,14 @@ indexes:
   - name: owner
   - name: name
 
+- kind: Document
+  properties:
+  - name: about_item
+  - name: about_kind
+  - name: comments
+  - name: updated_at
+    direction: desc
+
 - kind: Event
   properties:
   - name: about_item
