Editing accounts UI

--- a/index.yaml
+++ b/index.yaml
@@ -135,6 +135,12 @@ indexes:
 
 - kind: Event
   properties:
+  - name: about_item
+  - name: about_kind
+  - name: starts_at
+
+- kind: Event
+  properties:
   - name: about_kind
   - name: comments
   - name: status
