--- a/index.yaml
+++ b/index.yaml
@@ -161,9 +161,18 @@ indexes:
   properties:
   - name: about_item
   - name: about_kind
+  - name: comments
+  - name: status
   - name: updated_at
     direction: desc
-    
+
+- kind: Task
+  properties:
+  - name: about_item
+  - name: about_kind
+  - name: updated_at
+    direction: desc
+
 - kind: Topic
   properties:
   - name: about_item
