Filtering and sorting on list shows page #61

--- a/index.yaml
+++ b/index.yaml
@@ -858,9 +858,166 @@ indexes:
 
 - kind: Show
   properties:
+  - name: access
+  - name: organization
+  - name: status
+  - name: starts_at
+
+- kind: Show
+  properties:
+  - name: access
+  - name: organization
+  - name: status
+  - name: starts_at
+    direction: desc
+
+- kind: Show
+  properties:
+  - name: access
+  - name: organization
+  - name: status
+  - name: type_show
+  - name: name
+
+- kind: Show
+  properties:
+  - name: access
+  - name: organization
+  - name: status
+  - name: type_show
+  - name: starts_at
+
+- kind: Show
+  properties:
+  - name: access
+  - name: organization
+  - name: status
+  - name: type_show
+  - name: starts_at
+    direction: desc
+
+- kind: Show
+  properties:
+  - name: access
+  - name: organization
+  - name: status
+  - name: type_show
+  - name: updated_at
+    direction: desc
+
+- kind: Show
+  properties:
+  - name: access
+  - name: organization
+  - name: status
+  - name: updated_at
+    direction: desc
+
+- kind: Show
+  properties:
+  - name: collaborators_ids
+  - name: status
+  - name: starts_at
+
+- kind: Show
+  properties:
+  - name: collaborators_ids
+  - name: status
+  - name: starts_at
+    direction: desc
+
+- kind: Show
+  properties:
+  - name: collaborators_ids
+  - name: status
+  - name: type_show
+  - name: name
+
+- kind: Show
+  properties:
+  - name: collaborators_ids
+  - name: status
+  - name: type_show
+  - name: starts_at
+
+- kind: Show
+  properties:
+  - name: collaborators_ids
+  - name: status
+  - name: type_show
+  - name: starts_at
+    direction: desc
+
+- kind: Show
+  properties:
+  - name: collaborators_ids
+  - name: status
+  - name: type_show
+  - name: updated_at
+    direction: desc
+
+- kind: Show
+  properties:
+  - name: collaborators_ids
+  - name: status
+  - name: updated_at
+    direction: desc
+
+- kind: Show
+  properties:
   - name: organization
   - name: type_show
   - name: ends_at
+
+- kind: Show
+  properties:
+  - name: owner
+  - name: status
+  - name: starts_at
+
+- kind: Show
+  properties:
+  - name: owner
+  - name: status
+  - name: starts_at
+    direction: desc
+
+- kind: Show
+  properties:
+  - name: owner
+  - name: status
+  - name: type_show
+  - name: name
+
+- kind: Show
+  properties:
+  - name: owner
+  - name: status
+  - name: type_show
+  - name: starts_at
+
+- kind: Show
+  properties:
+  - name: owner
+  - name: status
+  - name: type_show
+  - name: starts_at
+    direction: desc
+
+- kind: Show
+  properties:
+  - name: owner
+  - name: status
+  - name: type_show
+  - name: updated_at
+    direction: desc
+
+- kind: Show
+  properties:
+  - name: owner
+  - name: status
+  - name: updated_at
+    direction: desc
 
 - kind: Task
   properties:
