only the show that is_published checked will be display on ioGrow live

--- a/index.yaml
+++ b/index.yaml
@@ -965,6 +965,13 @@ indexes:
 
 - kind: Show
   properties:
+  - name: is_published
+  - name: organization
+  - name: type_show
+  - name: ends_at
+
+- kind: Show
+  properties:
   - name: organization
   - name: type_show
   - name: ends_at
