First page on i/oGrow live, All upcoming Shows page, All Recently Shows page

--- a/index.yaml
+++ b/index.yaml
@@ -1096,6 +1096,12 @@ indexes:
 
 - kind: Show
   properties:
+  - name: is_published
+  - name: type_show
+  - name: ends_at
+
+- kind: Show
+  properties:
   - name: organization
   - name: type_show
   - name: ends_at
