--- a/index.yaml
+++ b/index.yaml
@@ -1097,6 +1097,13 @@ indexes:
 - kind: Show
   properties:
   - name: is_published
+  - name: organization
+  - name: type_show
+  - name: starts_at
+
+- kind: Show
+  properties:
+  - name: is_published
   - name: type_show
   - name: ends_at
 
