--- a/index.yaml
+++ b/index.yaml
@@ -189,6 +189,12 @@ indexes:
 
 - kind: Lead
   properties:
+  - name: organization
+  - name: updated_at
+    direction: desc
+
+- kind: Lead
+  properties:
   - name: owner
   - name: updated_at
     direction: desc
