after styling typeahead

--- a/index.yaml
+++ b/index.yaml
@@ -364,6 +364,11 @@ indexes:
 - kind: Task
   properties:
   - name: organization
+  - name: due
+
+- kind: Task
+  properties:
+  - name: organization
   - name: updated_at
     direction: desc
 
