rendering topics from accounts.get

--- a/index.yaml
+++ b/index.yaml
@@ -178,6 +178,13 @@ indexes:
   properties:
   - name: about_item
   - name: about_kind
+  - name: comments
+  - name: starts_at
+
+- kind: Event
+  properties:
+  - name: about_item
+  - name: about_kind
   - name: starts_at
 
 - kind: Lead
