--- a/index.yaml
+++ b/index.yaml
@@ -268,6 +268,11 @@ indexes:
 - kind: Lead
   properties:
   - name: organization
+  - name: status
+
+- kind: Lead
+  properties:
+  - name: organization
   - name: updated_at
     direction: desc
 
