Delete infonode on Account
Former-commit-id: 6b7e13a5a0bc2111abc514f4b47d2366b58bc83f

--- a/index.yaml
+++ b/index.yaml
@@ -496,6 +496,12 @@ indexes:
   - name: organization
   - name: probability
 
+- kind: Opportunitystage
+  properties:
+  - name: organization
+  - name: probability
+    direction: desc
+
 - kind: Show
   properties:
   - name: access
