adding profile_img to leads
Former-commit-id: 7e407ed91430954b99ca0401b10c7753e8dd02db

--- a/app.yaml
+++ b/app.yaml
@@ -13,6 +13,9 @@ libraries:
   version: latest
 - name: django
   version: "1.4"
+- name: ssl
+  version: latest
+
 
 handlers:
 - url: /static
@@ -26,4 +29,3 @@ handlers:
   login: admin
 - url: /.*
   script: handlers.app
-
